@@ -22,8 +22,8 @@
   <email>chuck@horde.org</email>
   <active>yes</active>
  </lead>
- <date>2013-02-01</date>
- <time>16:46:04</time>
+ <date>2013-02-04</date>
+ <time>18:47:14</time>
  <version>
   <release>6.1.0</release>
   <api>6.0.0</api>
@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Add image upload feature to the HTML editor image plugin.
 * [mms] Allow drag &amp; drop/pasting of images into the HTML editor.
 * [mms] All basic view pages are now routed through the basic.php endpoint.
 * [mms] Save AJAX showMessage call when reloading the dynamic mailbox page with a message preview active.
@@ -81,6 +82,7 @@
    </dir> <!-- /docs -->
    <dir name="js">
     <dir name="ckeditor">
+     <file name="imageupload.js" role="horde" />
      <file name="pasteattachment.js" role="horde" />
      <file name="pasteignore.js" role="horde" />
     </dir> <!-- /js/ckeditor -->
@@ -1386,6 +1388,7 @@
    <install as="imp/js/smartmobile.js" name="js/smartmobile.js" />
    <install as="imp/js/viewport.js" name="js/viewport.js" />
    <install as="imp/js/viewport_utils.js" name="js/viewport_utils.js" />
+   <install as="imp/js/ckeditor/imageupload.js" name="js/ckeditor/imageupload.js" />
    <install as="imp/js/ckeditor/pasteattachment.js" name="js/ckeditor/pasteattachment.js" />
    <install as="imp/js/ckeditor/pasteignore.js" name="js/ckeditor/pasteignore.js" />
    <install as="imp/lib/.htaccess" name="lib/.htaccess" />
@@ -2965,6 +2968,7 @@
     <api>stable</api></stability>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Add image upload feature to the HTML editor image plugin.
 * [mms] Allow drag &amp; drop/pasting of images into the HTML editor.
 * [mms] All basic view pages are now routed through the basic.php endpoint.
 * [mms] Save AJAX showMessage call when reloading the dynamic mailbox page with a message preview active.
