@@ -2,6 +2,7 @@
 v6.1.0-git
 ----------
 
+[mms] Add image upload feature to the HTML editor image plugin.
 [mms] Allow drag & drop/pasting of images into the HTML editor.
 [mms] All basic view pages are now routed through the basic.php endpoint.
 [mms] Save AJAX showMessage call when reloading the dynamic mailbox page with a
